fix(kpi): do not try to evaluate invalid kpi reports (#11922)
Skip these invalid KPI reports when evaluating.